--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nuxt-template",
+  "name": "devjeonghun.cf",
   "version": "1.0.0",
-  "description": "nuxt+vuetify",
+  "description": "blog",
   "author": "devjeonghun",
   "private": true,
   "scripts": {
@@ -11,9 +11,11 @@
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
-    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
+    "deploy": "firebase deploy"
   },
   "dependencies": {
+    "@nuxtjs/google-adsense": "^1.1.3",
+    "@nuxtjs/google-analytics": "^2.2.0",
     "firebase": "^5.3.0",
     "nuxt": "^2.8.1",
     "vuetify": "^1.3.6",
