--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
-    "deploy": "firebase deploy"
+    /*"deploy": "firebase deploy"*/
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "@nuxtjs/google-adsense": "^1.1.3",
